--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "joi": "^17.11.0"
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
-    "prisma": "^5.10.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prisma": "^5.10.2"
   }
 }
